--- a/META COURSE/index.html
+++ b/META COURSE/index.html
@@ -1,13 +1,36 @@
-<DOCTYPE html>
-<html>
+<!DOCTYPE html>
+<html lang="en">
     <head>
         <title>Kronos Idealny</title>
     </head>
     <body>
-        <h1>Tragedia w Nogowicach</h1>
-        <h2>Mistrz Porąbany Siekierą</h2>  
-        <p>Tego dnia szalony furiat<br/>wpadł do knajpeczki U Joli<br/>i porąbał mistrza Bazylego toporem</p>   
-        <h2>Królewna łka i płacze</h2>
-        <p>Królewna długo nie mogła<br/>pogodzić się z myślą, że jej ukochany<br/>jest w ośmiu kawałkach</p>
+        <div>
+            <h1>Tragedia w Nogowicach</h1>
+        </div>
+        <div>
+        <h2>Mistrz Porąbany Siekierą</h2>
+            <div>  
+                <p>Tego dnia szalony furiat<br>wpadł do knajpeczki U Joli<br>i porąbał mistrza Bazylego toporem</p>   
+            </div>
+        </div>
+        <div>
+            <h2>Królewna łka i płacze</h2>
+            <div>
+                <p>Królewna długo nie mogła<br>pogodzić się z myślą, że jej ukochany<br>jest w ośmiu kawałkach</p>
+            </div>
+        </div>
+        <div>
+            <h2>
+                lista rzeczy, które poszły nie tak
+            </h2>
+            <ul>
+                <li>dziwne znaki na niebie</li>
+                <li>smoki w powietrzu</li>
+                <li>diabły w słoikach</li>
+            </ul>
+            <p>jeśli chcesz wiedzieć więcej kliknij tu<br>
+                <a href="sodom.html">samochód, którym przyjechał diabeł</a>
+            </p>
+        </div>
     </body>
 </html>
