--- a/META COURSE/sodom.html
+++ b/META COURSE/sodom.html
@@ -2,15 +2,55 @@
 <html lang="en">
     <head>
         <title >diabli samochód</title>
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+        <link rel="stylesheet" href="styles/styles.css">
+
     </head>
     <body>
-        <div>
-            <h1>samochód, którym nadjechał diabeł</h1>
-            <img src="/obrazy/devilmobile.JPG" width="205" height="154">
-            <br>
-            <p>jeśli chesz wrócić kliknij poniżej<br>
-                <a href="index.html">powrót</a>
-            </p>
+        <div class="container">
+        <div class="container">
+            <div class="row">
+                <div class="col-12 col-sm-8 ramka">
+
+                    <img src="obrazy/devilmobile.JPG" 
+                    alt="auto diabła" class="img-fluid">
+                </div>
+                <div class="col-12 col-sm-4 ramka">
+                        <h1>samochód, którym nadjechał diabeeeeł</h1>
+                </div>
+            </div>
+                <div class="row">
+                    <a href="index.html" class="ramka">
+                        <button class="przycisk">powrót</button>
+                    </a>
+                </div>
+        </div>
+        <div class="container ramka">
+            <table class="table table-success">
+                <thread>
+                    <th scope="col">osobistość</th>
+                    <th scope="col">główna rola</th>
+                </thread>
+                <tbody>
+                <tr class="table-secondary">
+                    <td>
+                        <p>Trzmiel</p>
+                    </td>
+                    <td>
+                        <p>ojciec</p>
+                    </td>
+                </tr>
+                <tr class="table-info">
+                    <td>
+                        Kardamon
+                    </td>
+                    <td>
+                        prajser
+                    </td>
+                </tr>
+                </tbody>
+            </table>
+        </div>
         </div>
     </body>
 </html>
