--- a/varan/sources/chunks/career.html
+++ b/varan/sources/chunks/career.html
@@ -38,6 +38,17 @@
             <div class="mehaalomahn black-mamba" ng-show="k.work">
             <p class="centruj-title">CAREER</p>
             <ul>
+
+            <li><div class="penelope"> 
+                <p class="noMargins">07.2022 - 11.2022 Welcome Airport Services </p>
+                <p class="noMargins">Flight Coordinator - managing the flight operations on ground at WAW Chopin Airport</p>
+            </div> </li>
+
+            <li><div class="penelope"> 
+                <p class="noMargins">11.2019-03.2020 Lionbridge Poland Sp. z o.o. </p>
+                <p class="noMargins">Game Engine Tester - JIRA</p>
+            </div> </li>
+
             <li><div class="penelope"> 
                 <p class="noMargins">07.2018 - 09.2019 eTravel SA – IATA Travel Agency </p>
                 <p class="noMargins">Travel Agent, Key customers service - GDS Amadeus and Galileo / team management, cooperation with business partners</p>
