--- a/varan/index.html
+++ b/varan/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Varan</title>
+    <title>Paweł Banasiewicz</title>
 
     <!-- fonts -->
     <link href="https://fonts.googleapis.com/css?family=Kanit" rel="stylesheet">
@@ -36,7 +36,7 @@
             <span class="icon-bar"></span>
           </button>
           <a ui-sref="home"
-          ng-audio="sources/sounds/click.wav" volume="0.5">
+          ng-audio="sources/sounds/click.wav" volume="0.6">
            <div class="logo-img">
           <img src="sources/icons/logo.png" alt="VARAN">
           </div>
