--- a/varan/sources/chunks/career.html
+++ b/varan/sources/chunks/career.html
@@ -56,7 +56,7 @@
 
             <li><div class="penelope"> 
                 <p class="noMargins">02.2017 - side project for Cymes - Polish juice company </p>
-                <p class="noMargins">Three of us made a website for Cymes contest site named Mapa Szczęścia</p>
+                <p class="noMargins">I was  a part of the group making the website for Cymes contest site named Mapa Szczęścia</p>
                 <p class="noMargins">I was responsible for the UX/UI part - Javascript/Angular</p>
             </div> </li>
                 
