--- a/varan/sources/chunks/letter.html
+++ b/varan/sources/chunks/letter.html
@@ -15,7 +15,7 @@
                             <br>I always take care of the travellers, guiding them all thru the journey in case of irregularities - cancelled or delayed flights, problems in hotels or car rental companies.
                             <br>Now - as a person who likes new challenges, I would like to connect those interests into the career and work for the computer industry using my knowledge of business trip arrangement.  
                             <br>Aside from my good communication skills, perfect knowledge of my native language, fluency in English both written and spoken and ability to work with the team, I am very particular to the details that make your business trip as smooth as possible.   
-                            <br>I have also finished the HTML, CSS and javascript course and I learned angular myself, React on Meta Course, and now I'm taking the course with HongKong University on coursera on Angular to make my knowledge deeper.
+                            <br>I have also finished the HTML, CSS and javascript/Angular course, React on Meta course, and now I'm taking the course with HongKong University on coursera on Angular to make my knowledge deeper.
                             <br> 
                             <br>I believe I would be a valuable addition to your team and I really want to work for you. 
                             <br>Looking forward to hearing from you. 
