--- a/comdesign/sources/chunks/about.html
+++ b/comdesign/sources/chunks/about.html
@@ -18,7 +18,7 @@
 	<div class="col-md-9 col-sm-8 col-xs-12 kontener3">
 			<div class="col-xs-12 tekstpad kontener2">
 			<div class="mehaalomahn black-mamba" ng-show="k.soYoSpeak">
-			Profesjonalnie uczę walić konia!
+			Bum
 			</div>
 			</div>
 
@@ -29,7 +29,7 @@
 				<li> --  Maryla Rodowicz aka Roman Kostrzewa</li>
 				<li> --  Jan Twardowski </li>
 				<li> --  Gonzalez D'Sanchez </li>
-				<li> --  Maria Peszek aka Najbrzydsza Kobieta Świata</li>
+				<li> --  Maria Peszek</li>
 				<li> --  Antoni Maciarewicz </li>
 			</ul>
 			</div>
