--- a/varan/sources/chunks/career.html
+++ b/varan/sources/chunks/career.html
@@ -40,6 +40,11 @@
             <ul>
 
             <li><div class="penelope"> 
+                <p class="noMargins">12.2022 - now    www.coursera.org </p>
+                <p class="noMargins">Right now I'm taking part in many courses to be the best web developer ever</p>
+            </div> </li>
+
+            <li><div class="penelope"> 
                 <p class="noMargins">07.2022 - 11.2022 Welcome Airport Services </p>
                 <p class="noMargins">Flight Coordinator - managing the flight operations on ground at WAW Chopin Airport</p>
             </div> </li>
