--- a/varan/sources/chunks/career.html
+++ b/varan/sources/chunks/career.html
@@ -40,8 +40,8 @@
             <ul>
 
             <li><div class="penelope"> 
-                <p class="noMargins">12.2022 - now    www.coursera.org </p>
-                <p class="noMargins">Right now I'm taking part in many courses to be the best web developer ever</p>
+                <p class="noMargins">12.2022 - until now  -    www.coursera.org </p>
+                <p class="noMargins">Right now I'm taking part in many courses to become a good web developer</p>
             </div> </li>
 
             <li><div class="penelope"> 
