--- a/varan/sources/chunks/career.html
+++ b/varan/sources/chunks/career.html
@@ -67,6 +67,7 @@
                 <p class="noMargins">02.2017 - side project for Cymes - Polish juice company </p>
                 <p class="noMargins">I was  a part of the group making the website for Cymes contest site named Mapa Szczęścia</p>
                 <p class="noMargins">I was responsible for the UX/UI part - Javascript/Angular</p>
+                <p class="noMargins">You can find info about this page <a href="https://zgarniajto.pl/konkurs-cymes-mapa-szczescia/" target="_blank">here</a></p>
             </div> </li>
                 
             <li><div class="penelope"><p class="noMargins">11.2017 - 05.2018 Furnel Travel International – IATA Travel Agency </p>
