--- a/varan/sources/chunks/career.html
+++ b/varan/sources/chunks/career.html
@@ -49,6 +49,12 @@
             </div> </li>
 
             <li><div class="penelope"> 
+                <p class="noMargins">10.2022 - MGP Studios </p>
+                <p class="noMargins">Polish localization language proof check for the game Project Downfall</p>
+                <p class="noMargins">listed in the credits</p>
+            </div> </li>
+
+            <li><div class="penelope"> 
                 <p class="noMargins">07.2022 - 11.2022 Welcome Airport Services </p>
                 <p class="noMargins">Flight Coordinator - managing the flight operations on ground at WAW Chopin Airport</p>
             </div> </li>
