--- a/rege/varan/sources/chunks/career.html
+++ b/rege/varan/sources/chunks/career.html
@@ -40,7 +40,7 @@
             <ul>
 
             <li><div class="penelope"> 
-                <p class="noMargins">in case you need a traditional CV you can find it <a href="sources/cv/cv.pdf" target="_blank">here</a></p>
+                <p class="noMargins">in cuu you need a traditional CV you can find it <a href="sources/cv/cv.pdf" target="_blank">here</a></p>
             </div> </li>
 
             <li><div class="penelope"> 
