--- a/rege/varan/sources/chunks/pastime.html
+++ b/rege/varan/sources/chunks/pastime.html
@@ -34,16 +34,7 @@
                     <p class="centruj-title">GAMES</p>
                     <div class="penelope kontener4" ng-show="k.gamesIntro">
                     <p class="noMargins">I have been playing games since mid-80s and the 8-bit computers, which
-                        had an undeniable charm in their simplicity.<br>
-                        Because for me the most important thing in games is the story and the opportunity to participate in the adventure,
-                        I mostly play RPGs - the more complicated the better.
-                        <br>
-                        And I also like shooters, but I can't say I'm the best at it in the world :)<br>
-                        I appreciate when the game makes you think and evokes emotions and feelings,
-                        because the world of computer games is an incredible place of fun, entertainment,
-                        and adventures and I really can't wait what the future brings.<br>
-                        Please click the button below to see the list of the games that really 
-                        did inspire me somehow and please find me on Steam - my nickname is kukikoko.<br>
+                        dupaa dupa.<br>
                     </p>
 
                             <button class="btn btn-xs myButton1" ng-click="k.ShowTheList();"
