--- a/rege/varan/sources/chunks/contact.html
+++ b/rege/varan/sources/chunks/contact.html
@@ -5,7 +5,7 @@
         
             <div class="row">
                 <div class="col-md-3 col-md-offset-1 col-sm-3 col-sm-offset-1 col-xs-6 col-xs-offset-1 fotopad" ng-show="k.fotopad">
-                    <img class="img-rounded img-responsive" src="sources/pics/dc1.jpg" alt="face">
+                    <img class="img-rounded img-responsive" src="sources/pics/main.jpg" alt="face">
                 </div>
         
             <div class="col-md-6 col-md-offset-1 col-sm-7 col-sm-offset-1 col-xs-10 col-xs-offset-1 kontener3">
