--- a/rege/varan/index.html
+++ b/rege/varan/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Paweł Banasiewicz</title>
+    <title>Rege Brodacz</title>
 
     <!-- fonts -->
     <link href="https://fonts.googleapis.com/css?family=Kanit" rel="stylesheet">
@@ -38,7 +38,7 @@
           <a ui-sref="home"
           ng-audio="sources/sounds/click.wav" volume="0.6">
            <div class="logo-img">
-          <img src="sources/icons/logo.png" alt="VARAN">
+          <img src="sources/icons/trowel.png" alt="kielenka">
           </div>
           </a>
         </div>
