--- a/rege/varan/sources/chunks/home.html
+++ b/rege/varan/sources/chunks/home.html
@@ -2,14 +2,14 @@
 
 <div class="container fit-in-viewport kontener2" ng-show="k.showLizard">
 <div class="col-xs-10 col-xs-offset-1 col-sm-8 col-sm-offset-2 col-md-6 col-md-offset-3 col-lg-6 col-lg-offset-3">
-<img class="img-responsive" src="sources/pics/logo2.jpg" alt="Logo">
+<img class="img-responsive" src="sources/pics/Logo2.jpg" alt="Logo">
 </div>
 <div class="col-xs-12 text-center">
 <div class="logo-text">
-Paweł Banasiewicz
+RegeBrodacz
 </div>
 <div class="logo-text-small">
-..curriculum vitae..
+.. król kielni ..
 </div>
 </div>
 </div>
